--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ form.login {
   margin-top: 50px;
 }
 
+/* Slideshow css*/
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
@@ -10,7 +11,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
@@ -51,6 +52,38 @@ img {vertical-align: middle;}
   bottom: 8px;
   width: 100%;
   text-align: center;
+}
+
+/* Book info box*/
+.bookinfo {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 50%;
+  width: 100%;
+  text-align: center;
+}
+
+/* Book title */
+.booktitle {
+  text-align: left;
+  margin-left: 10%;
+  font-size: 45px;
+}
+
+/* Book headline */
+.bookheadline {
+  text-align: left;
+  margin-left: 10%;
+  font-size: 30px;
+}
+
+/* Book rating */
+.bookrating {
+  text-align: left;
+  margin-left: 10%;
+  font-size: 25px;
 }
 
 /* Number text (1/3 etc) */
