--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,3 +133,7 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+#review {
+  resize: vertical;
+}
