--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,22 +155,22 @@ img {vertical-align: middle;}
 }
 
 #title {
-  background-color: rgb(241, 205, 126);
+  background-color: white
   color: black;
 }
 
 #firstname {
-  background-color: rgb(241, 205, 126);
+  background-color: white
   color: black;
 }
 
 #lastname{
-  background-color: rgb(241, 205, 126);
+  background-color: white
   color: black;
 }
 
 #review{
-  background-color: rgb(241, 205, 126);
+  background-color: white
   color: black;
   border: 2px;
   border-style: solid;
@@ -178,7 +178,7 @@ img {vertical-align: middle;}
 }
 
 .form {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(241, 205, 126);
   opacity: 0.90;
 }
 
@@ -187,10 +187,6 @@ img {vertical-align: middle;}
   background-color: rgb(241, 205, 126);
   opacity: 0.80;
   color: black;
-}
-
-.container {
-  background-color: rgb(241, 205, 126);
 }
 
 body {
