--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,22 +155,22 @@ img {vertical-align: middle;}
 }
 
 #title {
-  background-color: white
+  background-color: white;
   color: black;
 }
 
 #firstname {
-  background-color: white
+  background-color: white;
   color: black;
 }
 
 #lastname{
-  background-color: white
+  background-color: white;
   color: black;
 }
 
 #review{
-  background-color: white
+  background-color: white;
   color: black;
   border: 2px;
   border-style: solid;
