--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,3 +1,4 @@
+  {{>navbar   active_memberstab=true}}
  <div class="slideshow-container">
         <div class="mySlides ">
           <div class="numbertext">1 / 3</div>
