--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+ {{>navbar   active_logintab=true}}
 <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
