search css, handlebar, html

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,17 @@
-<input type="text" id="searchBook">
-<button id="submitSearch">Search!</button>
-
-<ul id="results" class="list-group">
-</ul>
+<div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h2><span class="member-name"></span></h2>
+            </div>
+        </div>
+    </div>
+    <div class="form container">
+        <form action="/my-handling-form-page" method="post">
+            <input type="text" id="searchBook">
+            <button id="submitSearch">Search!</button>
+            
+            <ul id="results" class="list-group">
+            </ul>
+           </form>
+    </div>
+    </div>
