Updated handlebars for navbar and html routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link href="stylesheets/style.css" rel="stylesheet"> -->
+    <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    {{!-- <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/logout">
@@ -22,7 +22,7 @@
               <a class="navbar-brand" href="/login">
                 Log In
             </a>
-            <a class="navbar-brand" href="/view">
+            <a class="navbar-brand" href="/display">
               View
           </a>
           <a class="navbar-brand" href="/create">
@@ -33,13 +33,15 @@
         </a>
             </div>
         </div>
-    </nav>
+    </nav> --}}
  {{{ body }}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/members.js"></script>
     <script type="text/javascript" src="js/review.js"></script>
     <script type="text/javascript" src="js/search.js"></script>
+    <script type="text/javascript" src="js/signup.js"></script>
+     <script type="text/javascript" src="js/login.js"></script>
 
 </body>
 
