--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,7 +1,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand hometab {{#if active_hometab}}active{{/if}}" href="/home">
+              <a class="navbar-brand hometab {{#if active_hometab}}active{{/if}}" href="/members">
                 Home
             </a>
             <a class="navbar-brand signuptab {{#if active_signup}}active{{/if}}" href="/signup">
@@ -10,10 +10,10 @@
           <a class="navbar-brand logintab {{#if active_logintab}}active{{/if}}" href="/login">
             Log-In
         </a>
-        <a class="navbar-brand viewtab {{#if active_viewtab}}active{{/if}}" href="/view">
+        <a class="navbar-brand viewtab {{#if active_viewtab}}active{{/if}}" href="/display">
           View
       </a>
-      <a class="navbar-brand createtab {{#if active_createtab}}active{{/if}}" href="/create">
+      <a class="navbar-brand createtab {{#if active_createtab}}active{{/if}}" href="/search">
         Create
     </a>
     <a class="navbar-brand logouttab {{#if active_logouttab}}active{{/if}}" href="/logout">
