--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -2,7 +2,7 @@
  <div class="slideshow-container">
         <div class="mySlides ">
           <div class="numbertext">1 / 3</div>
-          <img src="../public/images/booksbackground4.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
+          <img src="images/booksbackground4.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
           <div class="bookinfo">
             <div class="booktitle">The Old Man and the Sea</div>
             <div class="bookheadline">"Worst Book...Ever!"</div>
@@ -12,7 +12,7 @@
         
         <div class="mySlides ">
           <div class="numbertext">2 / 3</div>
-          <img src="../public/images/booksbackground4.jpg" style="width:fit-content; height:fit-content; visibility: collapse;">
+          <img src="images/booksbackground4.jpg" style="width:fit-content; height:fit-content; visibility: collapse;">
           <div class="bookinfo">
           <div class="booktitle"></div>
           <div class="bookheadline"></div>
@@ -22,7 +22,7 @@
         
         <div class="mySlides ">
           <div class="numbertext">3 / 3</div>
-          <img src="../public/images/bookbsbackground2.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
+          <img src="images/booksbackground2.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
           <div class="bookinfo">
             <div class="booktitle"></div>
             <div class="bookheadline"></div>
