--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
     {{>navbar   active_signuptab=true}}
    <div class="container">
-        <div class="row">
+        <div class="row signupoBox">
             <div class="col-md-6 col-md-offset-3">
                 <h2>Sign Up Form</h2>
                 <form class="signup">
@@ -20,7 +20,7 @@
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                         <span class="sr-only">Error:</span> <span class="msg"></span>
                     </div>
-                    <button type="submit" class="btn btn-default">Sign Up</button>
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
                 </form>
                 <br />
                 <p>Or log in <a href="/login">here</a></p>
