--- a/views/display.handlebars
+++ b/views/display.handlebars
@@ -1,6 +1,6 @@
  {{>navbar   active_displaytab=true}}
 <div class="container">
-        <div class="row">
+        <div class="row signupBox text-center">
             <div class="col-md-6 col-md-offset-3">
                 <h2><span>Recent Reviews</span></h2>
             </div>
