--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
  {{>navbar   active_logintab=true}}
 <div class="container">
-        <div class="row">
+        <div class="row signupBox">
             <div class="col-md-6 col-md-offset-3">
                 <h2>Login Form</h2>
                 <form class="login">
@@ -16,10 +16,10 @@
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                         <span class="sr-only">Error:</span> <span class="msg"></span>
                     </div>
-                    <button type="submit" class="btn btn-default">Login</button>
+                    <button type="submit" class="btn btn-primary">Login</button>
                 </form>
                 <br />
-                <p>Or Sign Up <a href="/">here</a></p>
+                <p>Or Sign Up <a href="/"Here</a></p>
             </div>
         </div>
     </div>
