--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,7 +1,7 @@
 {{>navbar   active_createtab=true}}
 <div class="container">
     
-<div class="row">
+<div class="row signupBox">
 	<div class="col-md-10 text-center mr-auto ml-auto">
     <h1>Write Your Review!</h1>
     <h4>Use the search bar below to find the book you want to review</h4>
@@ -9,12 +9,11 @@
 
                             <input class="form-control" type="text" placeholder="Book Title" aria-label="Search" id="searchBook">
                             <div class="input-group-append">
-                                <button class="btn btn-primary my-2 my-sm-0" type="submit" id="submitSearch">Search!</button>
+                                <button class="btn btn-primary my-2 my-sm-0 btn-sm" type="submit" id="submitSearch">Search!</button>
                             </div>
                       </div>
 </div>
 </div>
-
-<ul id="results" class="list-group"> </ul>
     </div>
 
+<ul id="results" class="list-group"> </ul>
