Updated some styling

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -11,11 +11,14 @@
             Log-In
         </a>
         <a class="navbar-brand viewtab {{#if active_viewtab}}active{{/if}}" href="/display">
-          View
+          Browse
       </a>
       <a class="navbar-brand createtab {{#if active_createtab}}active{{/if}}" href="/search">
         Create
     </a>
+        <a class="navbar-brand logouttab {{#if active_profile}}active{{/if}}" href="/profile">
+      Your Reviews
+  </a>
     <a class="navbar-brand logouttab {{#if active_logouttab}}active{{/if}}" href="/logout">
       Logout
   </a>
