--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,8 @@
- {{>navbar   active_displaytab=true}}
+ {{>navbar   active_profile=true}}
 <div class="container">
         <div class="row signupBox text-center">
             <div class="col-md-12 text-center">
-                <h2><span>Recent Reviews</span></h2>
+                <h2><span>Your Reviews Reviews</span></h2>
             </div>
         </div>
         <div class="row">
