--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
     {{>navbar   active_signuptab=true}}
    <div class="container">
-        <div class="row signupoBox">
+        <div class="row signupBox">
             <div class="col-md-6 col-md-offset-3">
                 <h2>Sign Up Form</h2>
                 <form class="signup">
