--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,46 +3,6 @@ form.login {
   margin-top: 50px;
 }
 
-/* Slideshow css*/
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 100%;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -111,29 +71,6 @@ img {vertical-align: middle;}
   background-color: #717171;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-
 /* Nav bar */
 .navbar {
   background-color: rgb(231, 198, 108);
@@ -172,7 +109,11 @@ img {vertical-align: middle;}
 #review {
   resize: vertical;
   height: auto;
-
+  background-color: white;
+  color: black;
+  border: 2px;
+  border-style: solid;
+  border-color: black;
 }
 
 .filloutform {
@@ -185,23 +126,6 @@ img {vertical-align: middle;}
   color: black;
 }
 
-#firstname {
-  background-color: white;
-  color: black;
-}
-
-#lastname{
-  background-color: white;
-  color: black;
-}
-
-#review{
-  background-color: white;
-  color: black;
-  border: 2px;
-  border-style: solid;
-  border-color: black;
-}
 
 .form {
   background-color: rgb(241, 205, 126);
@@ -228,6 +152,11 @@ height: max-content;
 position: relative;
 }
 
+.jumbotron{
+  margin-top: 10px;
+  background-color: rgb(241, 205, 126);
+  opacity: 0.90;
+}
 
 /* background image */
 
