--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,36 +1,14 @@
   {{>navbar   active_memberstab=true}}
- <div class="slideshow-container">
-        <div class="mySlides ">
-          <div class="numbertext">1 / 3</div>
-          <img src="images/booksbackground4.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
-          <div class="bookinfo">
+ <div class="container-fluid">
+          <div>
+          <div class="jumbotron">
+            <div class="booktitle text-center">Welcome to Book Club!</div>
+            <div class="bookheadline text-center">A website that allows users to search for their favorite or least favorite books, leave reviews, and rate other reviews.</div>
+           </div>
+
+            <div class="jumbotron">
             <div class="booktitle">The Old Man and the Sea</div>
             <div class="bookheadline">"Worst Book...Ever!"</div>
-            <div class="bookrating">2 Liked 5 Disliked</div> 
-            </div>
-        </div>
-        
-        <div class="mySlides ">
-          <div class="numbertext">2 / 3</div>
-          <img src="images/booksbackground4.jpg" style="width:fit-content; height:fit-content; visibility: collapse;">
-          <div class="bookinfo">
-          <div class="booktitle"></div>
-          <div class="bookheadline"></div>
-          <div class="bookrating"></div>
-          </div>
-        </div>
-        
-        <div class="mySlides ">
-          <div class="numbertext">3 / 3</div>
-          <img src="images/booksbackground2.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
-          <div class="bookinfo">
-            <div class="booktitle"></div>
-            <div class="bookheadline"></div>
-            <div class="bookrating"></div>
-            </div>
-        </div>
-        
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        
+           </div>
+           </div>
         </div>
