--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,25 +1,47 @@
-    <nav class="navbar navbar-default">
-            <div class="navbar-header">
-              <a class="navbar-brand hometab {{#if active_hometab}}active{{/if}}" href="/members">
-                Home
-            </a>
-            <a class="navbar-brand signuptab {{#if active_signup}}active{{/if}}" href="/signup">
-              Sign-Up
-          </a>
-          <a class="navbar-brand logintab {{#if active_logintab}}active{{/if}}" href="/login">
-            Log-In
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand heading" href="/members">CHRSTOPH DOMINY</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <!-- Navigation Links -->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="navbar-brand hometab {{#if active_hometab}}active{{/if}}" href="/members">
+          Home
         </a>
+      </li>
+      <li class="nav-item">
+        <a class="navbar-brand signuptab {{#if active_signup}}active{{/if}}" href="/signup">
+          Sign-Up
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="navbar-brand logintab {{#if active_logintab}}active{{/if}}" href="/login">
+          Log-In
+        </a>
+      </li>
+      <li>
         <a class="navbar-brand viewtab {{#if active_viewtab}}active{{/if}}" href="/display">
           Browse
-      </a>
-      <a class="navbar-brand createtab {{#if active_createtab}}active{{/if}}" href="/search">
-        Create
-    </a>
+        </a>
+      </li>
+      <li>
+        <a class="navbar-brand createtab {{#if active_createtab}}active{{/if}}" href="/search">
+          Create
+        </a>
+      </li>
+      <li>
         <a class="navbar-brand logouttab {{#if active_profile}}active{{/if}}" href="/profile">
-      Your Reviews
-  </a>
-    <a class="navbar-brand logouttab {{#if active_logouttab}}active{{/if}}" href="/logout">
-      Logout
-  </a>
-            </div>
-    </nav>
+          Your Reviews
+        </a>
+      </li>
+      <li>
+        <a class="navbar-brand logouttab {{#if active_logouttab}}active{{/if}}" href="/logout">
+          Logout
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
