Updated website to use materialize

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -1,16 +1,16 @@
- {{>header   active_profile=true}}
+ {{>header   active_browse=true}}
 <main class="background">
   <!-- Search Bar -->
     <div class="container col s8">
       <div class="row">
-        <h2 class="center"><span class="memberName"></span>'s Profile</h2>
+        <h2 class="center">Most Recent Reviews</h2>
       </div>
 
       <!-- Beginning of Books being generated -->
 <div class="row">
   <div class="col s12 m12">
     <div class="row">
-<div></div>
+
       {{#each Reviews}}
         <div class="col s12 m3">
             <div class="card small">
