--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,202 +1,120 @@
-form.signup,
-form.login {
-  margin-top: 50px;
+nav .brand-logo {
+  position: relative;
+  margin-left: 10px;
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Book info box*/
-.bookinfo {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 50%;
-  width: 100%;
-  text-align: center;
-}
-
-/* Book title */
-.booktitle {
-  text-align: left;
-  margin-left: 10%;
-  font-size: 45px;
-}
-
-/* Book headline */
-.bookheadline {
-  text-align: left;
-  margin-left: 10%;
-  font-size: 30px;
-}
-
-/* Book rating */
-.bookrating {
-  text-align: left;
-  margin-left: 10%;
-  font-size: 25px;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Nav bar */
-.navbar {
-  background-color: rgb(231, 198, 108);
-  border-color: rgb(231, 198, 108);
-  border: 3px;
-  border-style: solid;
-  color: black;
-}
-
-.signupBox{
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.card{
-  margin: 10px;
-}
-.searchRows{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.list-group-item{
-  margin: 10px;
-  border-radius: 5px;
-}
-
-.row {
-  background-color: rgb(241, 205, 126);
-  opacity: 0.90;
-  font-weight: 1000;
-  color: black;
-}
-
-/* Create Page*/
-#review {
-  resize: vertical;
-  height: auto;
-  background-color: white;
-  color: black;
-  border: 2px;
-  border-style: solid;
-  border-color: black;
-}
-
-.filloutform {
-  color: rgb(0, 0, 0);
-  font-size: 30px;
-}
-
-#title {
-  background-color: white;
-  color: black;
-}
-
-
-.form {
-  background-color: rgb(241, 205, 126);
-  opacity: 0.90;
-}
-
-/* Home Page*/
-.bookinfo {
-  background-color: rgb(241, 205, 126);
-  opacity: 0.80;
-  color: black;
+.userPanel{
+    padding-left: 35px;
 }
 
 body {
-  font-family: 'Cutive Mono', monospace;
-  font-weight: 1000;
-  background-image: url(../images/booksbackground4.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-height: max-content;
-position: relative;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  font-family: 'Lato', sans-serif;
+  color: #3f2f2f;
 }
 
-.jumbotron{
-  margin-top: 10px;
-  background-color: rgb(241, 205, 126);
-  opacity: 0.90;
+main {
+  flex: 1 0 auto;
 }
 
-/* background image */
+/* Form Styling */
+  /* label color */
+  .input-field label {
+      color: #000;
+    }
+    /* label focus color */
+    .input-field input[type=text]:focus + label {
+      color: #000;
+    }
+    /* label underline focus color */
+    .input-field input[type=text]:focus {
+      border-bottom: 1px solid #000;
+      box-shadow: 0 1px 0 0 #000;
+    }
+    /* valid color */
+    .input-field input[type=text].valid {
+      border-bottom: 1px solid #000;
+      box-shadow: 0 1px 0 0 #000;
+    }
+    /* invalid color */
+    .input-field input[type=text].invalid {
+      border-bottom: 1px solid #000;
+      box-shadow: 0 1px 0 0 #000;
+    }
+    /* icon prefix focus color */
+    .input-field .prefix.active {
+      color: #000;
+    }
 
-html {
-  background-image: url(../images/booksbackground4.jpg);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100%;
-  background-color: rgb(241, 205, 126);
-}
-.filloutform {
-    background-image: url(../images/booksbackground4.jpg);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 
-#upvote {
-  background-image: url(../images/uparrow.jpg);
-  width: 30px;
-  height: 30px;
-}
+   .sign-card{
+       margin-top: 100px;
+       margin-bottom: 100px;
+   }
 
-#downvote {
-  background-image: url(../images/downarrow.jpg);
-  width: 30px;
-  height: 30px;
-}
+   #background-static{
+      background: #fff;
+      z-index: -1;
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vw;
+  }
+  .header-img{
+      height: 100vh;
+      width: 100vw;
+  }
 
-/* tabs */
+  #first-img{
+      height: 250px;
+    }
 
-.active {
-  font-size: x-large
-}
+    .brand-logo{
+      font-family: 'Noto Serif JP', serif;
+    }
 
-/* search page */
+    .nav-wrapper{
+      background-color: #864d2d;
+    }
 
-#searchBook {
-  width: 50%;
-  height: 30px;
-}
+    .page-footer{
+      background-color: #864d2d;
+    }
+    
+    .bg-color{
+        background-color: #e6dad7;
+    }
+
+    .authorStyle{
+      font-style: italic;
+    }
+
+    html, body{
+      height: 100%;
+    }
+    .contactDisplay { 
+      background-image: url(../images/contact.jpg) ;
+      background-position: center center;
+      background-repeat:  no-repeat;
+      background-attachment: fixed;
+      background-size:  cover;
+      background-color: #999;
+  
+    }
+
+    .background { 
+      background-image: url(../images/background.jpg) ;
+      background-position: center center;
+      background-repeat:  no-repeat;
+      background-attachment: fixed;
+      background-size:  cover;
+      background-color: #999;
+  
+    }
+
+    .hide{
+      display: none;
+    }
