--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,22 +2,37 @@
 <html lang="en">
 
 <head>
-    <title>Passport Authentication</title>
+    <title>Book Club</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="stylesheets/style.css" rel="stylesheet">
+      <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Serif+JP:wght@500&display=swap" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      {{!-- Style Sheet --}}
+       <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
 <body>
- {{{ body }}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/members.js"></script>
-    <script type="text/javascript" src="js/search.js"></script>
-    <script type="text/javascript" src="js/signup.js"></script>
-     <script type="text/javascript" src="js/login.js"></script>
+{{{body}}}
+  <footer class="page-footer">
+    <div class="footer-copyright">
+      <div class="container">
+      © 2020 Christoph Dominy
+      <a class="grey-text text-lighten-4 right" href="#!">Github Repo</a>
+      </div>
+    </div>
+  </footer>
 
+ <!-- JQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Materialize JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<!-- Custom Scripts -->
+<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/search.js"></script>
+<script type="text/javascript" src="js/signup.js"></script>
 </body>
-
 </html>
