--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,29 +1,38 @@
-    {{>navbar   active_signuptab=true}}
-   <div class="container">
-        <div class="row signupBox">
-            <div class="col-md-6 col-md-offset-3">
-                <h2>Sign Up Form</h2>
-                <form class="signup">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="emailInput" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Username</label>
-                        <input type="text" class="form-control" id="usernameInput" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="passwordInput" placeholder="Password">
-                    </div>
-                    <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                        <span class="sr-only">Error:</span> <span class="msg"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
-                </form>
-                <br />
-                <p>Or log in <a href="/login">here</a></p>
+    {{>header   active_signup=true}}
+<main class="background">
+    <div class="container col s8">
+        <div class="card-panel sign-card">
+        <div class="row">
+              <div class="col s12">
+                <h3 class="brand-logo center black-text">Sign Up Form</h3>
+              </div>
+        </div>
+        <form class="col s14 signup">
+          <div class="row">
+            <div class="input-field hoverable col s12">
+              <i class="material-icons prefix">account_circle</i>
+              <input id="usernameInput" type="text" class="validate">
+              <label for="usernameInput">Username</label>
+            </div>
+            <div class="input-field hoverable col s12">
+              <i class="material-icons prefix">email</i>
+              <input id="emailInput" type="email" class="validate">
+              <label for="emailInput">Email</label>
+            </div>
+          
+            <div class="input-field hoverable col s12">
+              <i class="material-icons prefix">vpn_key</i>
+              <input id="passwordInput" type="password" class="validate">
+              <label for="passwordInput">Password</label>
             </div>
         </div>
+<div class="row">
+    <div class="col s12">
+        <p class="left ">Or log in <a href="/login">here</a></p>
+    <button type="submit" class="right waves-effect waves-light btn right hoverable"><i class="large material-icons right">done</i>register</button>
+</div>
+</div>
+        </form>
     </div>
+      </div>
+</main>
