Added links to user's profiles in each review

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -21,7 +21,7 @@
                 <p>"{{this.review}}"</p>
               </div>
               <div class="card-action">
-                <a href="#">By {{this.name}} on {{this.createdAt}}</a>
+                <a href="/profile/{{this.UserId}}" >By {{this.name}} on {{this.createdAt}}</a>
               </div>
             </div>
           </div>
