Added too many features, but biggest update is fixing poor image quality on search

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,3 +118,17 @@ main {
     .hide{
       display: none;
     }
+
+    .thumbnail-img{
+      width: 100%;
+    }
+
+    .scroll-box {
+      overflow-y: scroll;
+      height: 75%;
+      padding: 1rem
+  }
+
+  .searchAction{
+    position: static !important;
+  }
