--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -20,59 +20,8 @@
           <h2 class="header center brand-logo">The Latest Reviews</h2>
         </div>
         <div class="col s12 m12">
-          <div class="row">
-              <div class="col s12 m3">
-                  <div class="card small">
-                    <div class="card-content">
-                      <span class="card-title">Book Title</span>
-                      <p class="authorStyle">By a person here</p>
-                      <br>
-                      <p>"Book review would go here"</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">Username @ date</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col s12 m3">
-                  <div class="card small">
-                    <div class="card-content">
-                      <span class="card-title">Book Title</span>
-                      <p class="authorStyle">By a person here</p>
-                      <br>
-                      <p>"Book review would go here"</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">Username @ date</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col s12 m3">
-                  <div class="card small">
-                    <div class="card-content">
-                      <span class="card-title">Book Title</span>
-                      <p class="authorStyle">By a person here</p>
-                      <br>
-                      <p>"Book review would go here"</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">Username @ date</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col s12 m3">
-                  <div class="card small">
-                    <div class="card-content">
-                      <span class="card-title">Book Title</span>
-                      <p class="authorStyle">By a person here</p>
-                      <br>
-                      <p>"Book review would go here"</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">Username @ date</a>
-                    </div>
-                  </div>
-                </div>
+          <div class="row" id="latestReviews">
+
             </div>
         </div>
       </div>
