Updated readMe and fixed broken contact form

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -8,7 +8,7 @@
                 <h3 class="brand-logo center black-text">Contact Me</h3>
               </div>
         </div>
-        <form class="col s14">
+        <form class="col s14" action="https://formspree.io/mknqyokk" method="POST">
           <div class="row">
             <div class="input-field hoverable col s12">
               <i class="material-icons prefix">account_circle</i>
