Added proper link for github repo to footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
     <div class="footer-copyright">
       <div class="container">
       © 2020 Christoph Dominy
-      <a class="grey-text text-lighten-4 right" href="#!">Github Repo</a>
+      <a class="grey-text text-lighten-4 right" href="https://github.com/cldominy/book-club">Github Repo</a>
       </div>
     </div>
   </footer>
